--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri dev"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
+    "antd": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
