--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ tauri = { version = "1.4.0", features = ["dialog-all"] }
 device_query = "1.1.3"
 enigo = "0.1.3"
 once_cell = "1.18.0"
+clipboard = "0.5"
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
